# WXCC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  LLVM-IR.md  azure-pipelines.yml  config.h.in  main.cc  main.cpp
.github/: clang-tidy-processor.py
.github/workflows/: clang-tidy.yml  cmake.yml  codeql.yml
Env/: Env.cpp  symbol.cpp  table.cpp
cmake/: ArgParse.cmake  Check.cmake  Coverage.cmake  FindLLVMConfig.cmake  FindUBSan.cmake  Fmt.cmake  GTest.cmake  stack-usage.cc
driver/: driver.h  main.cc  opt.cc
driver/v1/: main.cc
env/: environment.cpp  symbol.cpp  table.cpp
includes/: Env.h  Table.h  codegen.h  environment.h  exception.h  expr.h  functions.h  identifier.h  lex.h  parser.h  semantic.h  stmt.h  symbol.h  system.h  table.h  tools.h  tree.h  type.h
includes/environment/: identifier.h
includes/lex/: constants.h  input.h  lexer.h  output.h  print.h  token.h  tools.h
includes/parser/: parser.h  translation_unit.h
includes/semantic/: environment.h  type.h
includes/syntax/: translation_unit.h
includes/utils/: arg.h  bit_container.h  error_manager.h  table.h  tree.h  utils.h
includes/v1/: codegen.h  environment.h  exception.h  expr.h  functions.h  identifier.h  parser.h  semantic.h  stmt.h  symbol.h  table.h  tools.h  tree.h  type.h
inter/: semantic.cpp  tree.cpp
lex/: input.cpp  lex.cpp  lexDebug.cpp  lexWE.cpp
lib/: CMakeLists.txt
lib/env/: environment.cc  environment.cpp  symbol.cc  symbol.cpp  table.cc
lib/environment/: identifier.cc
lib/inter/: semantic.cc  semantic.cpp  tree.cc  tree.cpp
lib/lex/: input.cc  input.cpp  lex.cc  lex.cpp  lexDebug.cc  lexDebug.cpp  lexWE.cc  lexWE.cpp  output.cc  token.cc  token.cpp
lib/parser/: decl.cc  decl.cpp  declaration.cc  expr.cc  expr.cpp  parser.cc  parser.cpp  parserTool.cc  parserTool.cpp  parserWE.cc  parserWE.cpp  stmt.cc  stmt.cpp
lib/semantic/: semacticWE.cc  semacticWE.cpp  type.cc  type.cpp
lib/tools/: error_manager.cc  tools.cc  tools.cpp
lib/utils/: arg.cc  error_manager.cc  tools.cc
lib/v1/env/: environment.cc  symbol.cc
lib/v1/inter/: semantic.cc  tree.cc
lib/v1/parser/: decl.cc  expr.cc  parser.cc  parserTool.cc  parserWE.cc  stmt.cc
lib/v1/semantic/: semacticWE.cc  type.cc
parser/: decl.cpp  expr.cpp  parser.cpp  parserTool.cpp  parserWE.cpp  stmt.cpp
semantic/: semacticWE.cpp  type.cpp
test/: CMakeLists.txt  test.cc  test.h  test_lib.cc
test/flex_bison/: lex.cc
test/flex_bison/misc/: fb.cc  fb_fwd.h  flex.l  flex_bison.h  flex_bison_lexer.h  main.cc  parser.y
test/lex/: file_input.cc  l1.cc  lexer.cc  memory_input.cc
test/parser/: decl.cc
test/utils/: bit_container.cc  tree.cc
tools/: tools.cpp
